--- a/Productos.html
+++ b/Productos.html
@@ -20,23 +20,12 @@
 </header>
 
 <nav class="navegacion">
-    <a class="navegacion__enlace navegacion__enlace--activo" href="#">Tienda</a>
-    <a class="navegacion__enlace " href="Nosotros.html">Nosotros</a>
+    <a class="navegacion__enlace " href="index.html">Tienda</a>
+    <a class="navegacion__enlace navegacion__enlace--activo" href="Nosotros.html">Nosotros</a>
 </nav>
 
 <main class="contendeor">
-    <h1>Nuestros Productos</h1>
-    <div class="grid">
-        <div class="Productos">
-            <a href="Productos.html">
-                <img class="producto_imagen" src="img/1" alt="imagen camisa">
-                <div class="producto_informacion">
-                    <p class="producto_nombre">VueJS</p>
-                    <p class="producto_precio">$25</p>
-                </div>
-            </a>
-        </div>
-    </div>
+    <h1>Productos</h1>
 </main>
 
 <footer>
