--- a/Nosotros.html
+++ b/Nosotros.html
@@ -25,7 +25,11 @@
 </nav>
 
 <main class="contendeor">
-    <h1>Noestros</h1>
+    <h1>Nosotros</h1>
+<div class="nosotros"></div>
+<div class="nosotros__contenido"></div>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum dolores sint assumenda odio mollitia commodi laudantium at sit soluta ex distinctio reiciendis ut vel, eaque excepturi officiis fugiat nam repellendus?</p>
+<img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
 </main>
 
 <footer>
