--- a/index.html
+++ b/index.html
@@ -26,16 +26,136 @@
 
 <main class="contendeor">
     <h1>Nuestros Productos</h1>
+
     <div class="grid">
         <div class="Productos">
             <a href="Productos.html">
-                <img class="producto_imagen" src="img/1" alt="imagen camisa">
-                <div class="producto_informacion">
-                    <p class="producto_nombre">VueJS</p>
-                    <p class="producto_precio">$25</p>
+                <img class="productos_imagen" src="img/1.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">VueJS</p>
+                    <p class="productos_precio">$25</p>
                 </div>
             </a>
-        </div>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/2.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">AngularJS</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/3.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">ReactJS</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/4.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">Redux</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/5.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">NodeJS</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/6.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">SASS</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/7.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">HTML5</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/8.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">GitHub</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/9.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">BulmaCSS</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/10.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">TypeScript</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/11.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">Drupal</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/12.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">JavaScript</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/13.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">GraphQL</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="Productos">
+            <a href="Productos.html">
+                <img class="productos_imagen" src="img/14.jpg" alt="imagen camisa">
+                <div class="productos_informacion">
+                    <p class="productos_nombre">WordPress</p>
+                    <p class="productos_precio">$25</p>
+                </div>
+            </a>
+        </div> <!--producto-->
+        <div class="grafico grafico--camisas"></div>
+        <div class="grafico grafico--node"></div>
     </div>
 </main>
 
